Added member-profiles endpoint successfully to create a new profile
